cabal-version:      3.0
name:               servant-miso-json
version:            0.1.0.0
synopsis:           A servant / miso adaptor package for rendering JSON
description:        This package provides a Content Type for using miso Value with servant APIs
homepage:           https://github.com/haskell-miso/servant-miso-json
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          dmjio (c) 2026
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:
    warnings
  exposed-modules:
    Servant.Miso.JSON
  build-depends:
    base < 5,
    http-media < 0.9,    
    servant > 0.18 && < 0.21,
    miso >= 1.9 && < 1.10
  hs-source-dirs:
    src
  default-language:
    Haskell2010
